# structured

./: .gitignore  ANNWrapper.cpp  ANNWrapper.h  BuildAtlas.cpp  BuildAtlas.h  CMakeLists.txt  COPYING  CPUDetect.cpp  CPUDetect.h  CheckThreadPool.cpp  CheckThreadPool.h  Clean.cpp  Clean.h  Clipper.cpp  Clipper.h  DataStruct.h  DeepZoom.cpp  Depth.cpp  Depth.h  Didson.cpp  Didson.h  Extents.cpp  Extents.h  FindPythonModule.cmake  GLImaging.cpp  GLImaging.h  GraphicsWindowCarbon.cpp  GraphicsWindowCarbon.h  MSC.cpp  MSC.hpp  Makefile  MemUtils.cpp  MemUtils.h  MemoryUsage.h  OSGExport.cpp  OSGExport.h  OctreeBuilder.cpp  OctreeBuilder.h  OptimizeForArchitecture.cmake  PLYWriterNodeVisitor.cc  (+163 more)
ann-merge/src/: CMakeLists.txt  ann_merge.cpp
clip_delaunay/: CMakeLists.txt  clip_delaunay.cpp
gts-0.7.6/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.in.cmake  configure  configure.in
gts-0.7.6/doc/: Makefile.in
gts-0.7.6/examples/: Makefile.in  cartesian.c  cleanup.c  coarsen.c  delaunay.c  happrox.c  iso.c  merge.c  optimize.c  partition.c  refine.c  set.c  smooth.c  sphere.c  split.c  stripe.c  transform.c  traverse.c  volume.c
gts-0.7.6/src/: CMakeLists.txt  Makefile.in  point.c
gts-0.7.6/test/: Makefile.in
gts-0.7.6/tools/: Makefile.in  gts2oogl.c  gts2stl.c  gtscheck.c  gtscompare.c  stl2gts.c
poisson/: CMakeLists.txt  Makefile  dumpnormpts.cc
poisson/src/: CMakeLists.txt  MemoryUsage.h  MultiGridOctest.cpp  MultiGridOctreeData.inl
quadmerge/: CMakeLists.txt  D3DFXSquareList.cpp  D3DFXSquareList.h  coord.hpp  draw.cpp  envelope.cpp  envelope.hpp  fileio.cpp  fileio.hpp  geometry.cpp  geometry.hpp  oldmerge.cpp  quadmerge.cpp  quadtest.cpp  quadtree.hpp  raster.cpp  raster.hpp  resample.cpp  resample.hpp  sample.cpp  sample.hpp  shadowmap.cpp  shadowmap.hpp  terrainnode.hpp  uquadtree.cpp  uquadtree.hpp  vpRobust.cpp  vpRobust.h
quadmerge/demdata/: gc16at128.raw
quadmerge/nn/: makefile  nn.h
quadmerge/nnold/: config.status  delaunay.h  makefile  nn.h  nn_internal.h  nnbathy.c
quadmerge/robust/: Exception.cpp  Exception.hpp  MathBase.hpp  Matrix.hpp  MatrixBase.hpp  MatrixBaseOperators.hpp  MatrixFunctors.hpp  MatrixImplementation.hpp  MatrixOperators.hpp  MiscMath.hpp  RobustStats.cpp  RobustStats.hpp  StringUtils.hpp  Vector.hpp  VectorBase.hpp  VectorBaseOperators.hpp  VectorOperators.hpp
quadtree/: CMakeLists.txt  QTElement.h  SpatialQuadtree.cpp  SpatialQuadtree.h  quadmerge.cpp
quadtree/fast/: Makefile  Mynode.cpp  Mytree.cpp  Mytree.h  Quadnode.cpp  Quadnode.h  Quadtree.cpp  Quadtree.h  demo.cpp
quadtree/light/: Makefile  Mynode.h  Mytree.cpp  Mytree.h  Quadnode.h  Quadtree.cpp  Quadtree.h  demo.cpp
re_vision/: CMakeLists.txt
re_vision/patches_for_bundle/: Bundle2PMVS2.cpp  Bundle2PMVS_cpp_patch.diff  config-default.sh  install.sh
re_vision/src/: changeReferenceSystem.cpp
retex/: CMakeLists.txt  Path.cpp  Path.h  SnapshotCallback.cpp  SnapshotCallback.h  osgretex.cpp
spatialindex-src-1.6.1/src/: ._Makefile.am  CMakeLists.txt  Makefile.in
swrender/: CMakeLists.txt  ClippedTriangle.cpp  ClippedTriangle.h  FragmentShaders.cpp  FragmentShaders.h  Raster.cpp  Raster.h  VertexShaders.cpp  VertexShaders.h  VipsSampler.cpp  VipsSampler.h  ar.cpp  ar.h  blendincore.cpp  democommon.h  depthmap.cpp  example2.cpp  generic_fragment_shader.cpp  generic_fragment_shader.h  generic_vertex_shader.cpp  generic_vertex_shader.h  meshvar.cpp  mipmap.cpp  mipmap.h  mipmap_ipl.cpp  mipmap_ipl.h  nonmem.cpp  plyfile.cpp  rangeimg.cpp  render_utils.cpp  render_utils.h  temp.cpp  typedefs.h  vector_math.h  vertexData.cpp  vertexData.h
swrender/fixedpoint/: fixed_class.h  fixed_func.cpp  fixed_func.h
swrender/renderer/: Readme.txt  duffsdevice.h  fixed_func.h  geometry_processor.cpp  geometry_processor.h  irasterizer.h  mystdint.h  rasterizer_subdivaffine.h  rasterizer_tsbase.h  span.h  stepmacros.h  stepmacros_undef.h  util.h  vertex_processor.h
texture_image/: CMakeLists.txt  Makefile  PosterPrinter.cpp  PosterPrinter.h  as.txt  long.txt  osgposter  osgposter.cpp  out  out.txt  poster.xml  texture_image
texturedDecimator/: CMakeLists.txt  mergeMesh.cpp  meshmodel.h  quadric_tex_simp.cpp  quadric_tex_simp.h  texturedDecimator.cpp  triGap.cpp  triangle.c  triangle.h  triangulate.cpp  tridecimator.cpp
texturedDecimator/shadevis/: gen_normal.h  shadevis.cpp  visshader.h
texturedDecimator/vcg/: ._Eigen  ._complex  ._connectors  ._container  ._math  ._simplex  ._space
texturedDecimator/wrap/: ._bmt  ._callback.h  ._dae  ._gl  ._gui  ._io_edgemesh  ._io_tetramesh  ._io_trimesh  ._math  ._minpack  ._mt  ._opensg  ._ply  ._qt  ._system  ._utils.h
triangulation/: ALIRE  CMakeLists.txt  CMakeLists.txt0  addcells.cpp  cam-1.ply  cam.ply  camtest.cpp  camtest0.cpp  cmpcgal.cpp  cmpcgal.cpp.ori  cmpcgal.h  config.cpp  delaunay.cpp  delaunay.h  delaunay_io.cpp  drawcameras.py  extract.cpp  extract_ply_comment.sh  findpt  geomv.h  gviewer.cpp  hist.cpp  intersect.cpp  myoptions.py  myutils.py  qviewer.cpp  qviewer.h  read_bunbler.cpp  smooth.cpp  triangclean.cpp  triangdefs.h  tst-delaunay.cpp  tst_info.cpp  usedpoints.cpp
triangulation/devel-doc/: Doxyfile
triangulation/maxflow/: graph.cpp  maxflow.h
triangulation/new/: addcells.cpp  delaunay.cpp  delaunay.h  intersect.cpp
tridecimator/: CMakeLists.txt  Makefile  meshmodel.h  plylib.cpp  quadricsimp.cpp  remove_small_cc.h  tridecimator.cpp
trimesh2/: CMakeLists.txt  Color.h  GLCamera.cc  GLCamera.h  ICP.cc  TriMesh.h  TriMesh_io.cc  Vec.h  mesh_view.cc
vcgapps/: CMakeLists.txt  GenParam.cpp  GenParam.h  OGFClean.cpp  cleanTexMesh.cpp  gen_normal.h  mergeMesh.cpp  out.ply  quadric5.h  quadric_tex_simp.cpp  quadric_tex_simp.h  renderReorder.cpp  renderReorderAA.cpp  renderSquareAA.cpp  renderSquareAAVar.cpp  reorderOutOfCoreImage.cpp  reparam.cpp  setupDebugMesh.cpp  shadevis.cpp  simplepic.h  splitForTablet.cpp  sw-shadevis.cpp  sw-visshader.h  texturedDecimator.cpp  tridecimator.cpp  visshader.h
vcgapps/OGF/: CMakeLists.txt
vtkquad/: CMakeLists.txt  TestHyperOctreeIO.cxx
(+1974 files in other folders)
